--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: postgres:latest
     container_name: postgres
     environment:
-      POSTGRES_USER: user          # 数据库用户名
-      POSTGRES_PASSWORD: password  # 数据库密码
-      POSTGRES_DB: star_graph      # 数据库名称
+      POSTGRES_USER: duanju          # 数据库用户名
+      POSTGRES_PASSWORD: duanju  # 数据库密码
+      POSTGRES_DB: duanju      # 数据库名称
     ports:
       - "5432:5432"                # 映射端口
     volumes:
